--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "helmet": "^8.0.0",
     "pino": "^9.5.0",
     "pino-http": "^10.3.0",
+    "pino-pretty": "^13.1.3",
     "uuid": "^11.0.3",
     "zod": "^3.23.8"
   },
