feat: update database configuration to use MySQL and remove PostgreSQL references

--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,8 @@
 NODE_ENV=development
 PORT=3000
 
-# Database Configuration (PostgreSQL)
-DATABASE_URL="postgresql://user:password@localhost:5432/notifications_db?schema=public"
-
-# Alternative: MySQL
-# DATABASE_URL="mysql://user:password@localhost:3306/notifications_db"
+# Database Configuration (MySQL)
+DATABASE_URL="mysql://app_user:StrongPassword@123@159.65.5.198:3306/notification"
 
 # Service Token for Private API Authentication
 SERVICE_TOKEN=your-secret-service-token-here-change-in-production
