feat: implement JWT authentication for SSO login, including new auth controller, service, and routes

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@ PORT=3000
 # Database Configuration (MySQL)
 DATABASE_URL="mysql://app_user:StrongPassword@123@159.65.5.198:3306/notification"
 
-# Service Token for Private API Authentication
-SERVICE_TOKEN=your-secret-service-token-here-change-in-production
+# JWT Configuration for SSO Authentication
+JWT_SECRET=your-jwt-secret-key-change-in-production-make-it-long-and-random
 
 # Logging
 LOG_LEVEL=info
