--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    environment: CI_ENV
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -31,6 +32,7 @@ jobs:
   deploy:
     needs: build-and-push
     runs-on: ubuntu-latest
+    environment: CI_ENV
     steps:
       - name: Deploy to Portainer via Webhook
         run: |
